--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,13 @@
         android:theme="@style/Theme.Room"
         tools:targetApi="31">
         <activity
-            android:name=".ui.Main"
-            android:exported="true"
-            android:label="@string/main_compose"
-            android:theme="@style/Theme.Room">
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="false">
         </activity>
     </application>
 
